mod: cores general estágiarios

--- a/index.html
+++ b/index.html
@@ -834,18 +834,20 @@
                                 <p class="node-label-cargo">SERVIDOR</p>
                             </a>
                             <ul class="funcionarios">
-                                <li class="tree-node">
+                                <li class="tree-node-matutino">
                                     <a href="#" class="node-link">
                                         <img src="imagens/guilherme.jpg" alt="Employee Image" class="node-image">
                                         <span class="node-label">Guilherme</span>
                                         <p class="node-label-cargo">ESTAGIÁRIO</p>
+                                        <p class="node-label-turno">Matutino</p>
                                     </a>
                                 </li>
-                                <li class="tree-node">
+                                <li class="tree-node-vespertino">
                                     <a href="#" class="node-link">
                                         <img src="imagens/kayo.jpg" alt="Employee Image" class="node-image">
                                         <span class="node-label">Kayo</span>
                                         <p class="node-label-cargo">ESTAGIÁRIO</p>
+                                        <p class="node-label-turno">Vespertino</p>
                                     </a>
                                 </li>
                             </ul>
@@ -868,18 +870,20 @@
                                 <p class="node-label-cargo">SERVIDOR</p>
                             </a>
                             <ul class="funcionarios">
-                                <li class="tree-node">
+                                <li class="tree-node-matutino">
                                     <a href="#" class="node-link">
                                         <img src="imagens/maria meyer.jpg" alt="Employee Image" class="node-image">
                                         <span class="node-label">Maria</span>
                                         <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                        <p class="node-label-turno">Matutino</p>
                                     </a>
                                 </li>
-                                <li class="tree-node">
+                                <li class="tree-node-vespertino">
                                     <a href="#" class="node-link">
                                         <img src="imagens/alanna.jpg" alt="Employee Image" class="node-image">
                                         <span class="node-label">Alanna</span>
                                         <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                        <p class="node-label-turno">Vespertino</p>
                                     </a>
                                 </li>
                             </ul>
@@ -902,54 +906,61 @@
                                 <p class="node-label-cargo">SERVIDOR</p>
                             </a>
                             <ul class="funcionarios">
-                                <li class="tree-node">
+                                <li class="tree-node-matutino">
                                     <a href="#" class="node-link">
                                         <img src="imagens/ana clara.jpg" alt="Employee Image" class="node-image">
                                         <span class="node-label">ANA CLARA</span>
                                         <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                        <p class="node-label-turno">Matutino</p>
                                     </a>
                                 </li>
-                                <li class="tree-node">
+                                <li class="tree-node-matutino">
                                     <a href="#" class="node-link">
                                         <img src="imagens/kaique.jpg" alt="Employee Image" class="node-image">
                                         <span class="node-label">KAIQUE</span>
                                         <p class="node-label-cargo">ESTAGIÁRIO</p>
+                                        <p class="node-label-turno">Matutino</p>
                                     </a>
                                 </li>
-                                <li class="tree-node">
+                                <li class="tree-node-matutino">
                                     <a href="#" class="node-link">
                                         <img src="imagens/jhonatan.jpg" alt="Employee Image" class="node-image">
                                         <span class="node-label">JHONATAN</span>
                                         <p class="node-label-cargo">ESTAGIÁRIO</p>
+                                        <p class="node-label-turno">Matutino</p>
                                     </a>
                                 </li>
-                                <li class="tree-node">
+                                <li class="tree-node-matutino">
                                     <a href="#" class="node-link">
                                         <img src="imagens/leonardo.jpg" alt="Employee Image" class="node-image">
                                         <span class="node-label">Leonardo</span>
                                         <p class="node-label-cargo">ESTAGIÁRIO</p>
+                                        <p class="node-label-turno">Matutino</p>
                                     </a>
                                 </li>
-                                <li class="tree-node">
+                                <li class="tree-node-vespertino">
                                     <a href="#" class="node-link">
                                         <img src="imagens/gabriela tamanini.jpg" alt="Employee Image"
                                             class="node-image">
                                         <span class="node-label">GABRIELA</span>
                                         <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                        <p class="node-label-turno">Vespertino</p>
                                     </a>
                                 </li>
-                                <li class="tree-node">
+                                <li class="tree-node-vespertino">
                                     <a href="#" class="node-link">
                                         <img src="imagens/rafaela.jpg" alt="Employee Image" class="node-image">
                                         <span class="node-label">RAFAELA</span>
                                         <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                        <p class="node-label-turno">Vespertino</p>
                                     </a>
                                 </li>
-                                <li class="tree-node">
+                                <li class="tree-node-vespertino">
                                     <a href="#" class="node-link">
                                         <img src="imagens/kaiki.jpg" alt="Employee Image" class="node-image">
                                         <span class="node-label">KAIKI</span>
                                         <p class="node-label-cargo">ESTAGIÁRIO</p>
+                                        <p class="node-label-turno">Vespertino</p>
                                     </a>
                                 </li>
                             </ul>
@@ -997,64 +1008,73 @@
                                         <p class="node-label-cargo">SERVIDORA</p>
                                     </a>
                                     <ul class="sub-funcionarios">
-                                        <li class="tree-node">
+                                        <li class="tree-node-matutino">
                                             <a href="#" class="node-link">
                                                 <img src="imagens/alana.jpg" alt="Employee Image" class="node-image">
                                                 <span class="node-label">Alana</span>
                                                 <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                                <p class="node-label-turno">Matutino</p>
                                             </a>
-                                        <li class="tree-node">
+                                        <li class="tree-node-matutino">
                                             <a href="#" class="node-link">
                                                 <img src="imagens/thais.jpg" alt="Employee Image" class="node-image">
                                                 <span class="node-label">Thais</span>
                                                 <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                                <p class="node-label-turno">Matutino</p>
                                             </a>
-                                        <li class="tree-node">
+                                        <li class="tree-node-matutino">
                                             <a href="#" class="node-link">
                                                 <img src="imagens/caroline.jpg" alt="Employee Image" class="node-image">
                                                 <span class="node-label">Caroline</span>
                                                 <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                                <p class="node-label-turno">Matutino</p>
                                             </a>
-                                        <li class="tree-node">
+                                        <li class="tree-node-vespertino">
                                             <a href="#" class="node-link">
                                                 <img src="imagens/fernando.jpg" alt="Employee Image" class="node-image">
                                                 <span class="node-label">Fernando</span>
                                                 <p class="node-label-cargo">ESTAGIÁRIO</p>
+                                                <p class="node-label-turno">Vespertino</p>
                                             </a>
-                                        <li class="tree-node">
+                                        <li class="tree-node-vespertino">
                                             <a href="#" class="node-link">
                                                 <img src="imagens/cristopher.jpg" alt="Employee Image"
                                                     class="node-image">
                                                 <span class="node-label">Cristopher</span>
                                                 <p class="node-label-cargo">ESTAGIÁRIO</p>
+                                                <p class="node-label-turno">Vespertino</p>
                                             </a>
                                         </li>
-                                        <li class="tree-node">
+                                        <li class="tree-node-vespertino">
                                             <a href="#" class="node-link">
                                                 <img src="imagens/gabriela.jpg" alt="Employee Image" class="node-image">
                                                 <span class="node-label">Gabriela</span>
                                                 <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                                <p class="node-label-turno">Vespertino</p>
                                             </a>
                                         </li>
-                                        <li class="tree-node">
+                                        <li class="tree-node-vespertino">
                                             <a href="#" class="node-link">
                                                 <img src="imagens/dandara.jpg" alt="Employee Image" class="node-image">
                                                 <span class="node-label">Dandara</span>
                                                 <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                                <p class="node-label-turno">Vespertino</p>
                                             </a>
                                         </li>
-                                        <li class="tree-node">
+                                        <li class="tree-node-vespertino">
                                             <a href="#" class="node-link">
                                                 <img src="imagens/jennifer.jpg" alt="Employee Image" class="node-image">
                                                 <span class="node-label">Jennifer</span>
                                                 <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                                <p class="node-label-turno">Vespertino</p>
                                             </a>
                                         </li>
-                                        <li class="tree-node">
+                                        <li class="tree-node-vespertino">
                                             <a href="#" class="node-link">
                                                 <img src="imagens/francine.jpg" alt="Employee Image" class="node-image">
                                                 <span class="node-label">Francine</span>
                                                 <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                                <p class="node-label-turno">Vespertino</p>
                                             </a>
                                         </li>
                                     </ul>
