--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                                 </li>
                             </ul>
                             <ul class="gestao-estagiarios" id="gestao-estagiarios">
-                                <li class="tree-node">
+                                <li class="tree-node-matutino">
                                     <a href="#" class="node-link funcionario">
                                         <img src="imagens/thaigor.jpg" alt="Funcionario 1 Image" class="node-image">
                                         <span class="node-label">thaigor</span>
@@ -77,13 +77,7 @@
                                         <p></p>
                                     </a>
                                 </li>
-                                <li class="tree-node">
-                                    <a href="#" class="node-link funcionario">
-                                        <img src="imagens/viviane.jpg" alt="Funcionario 2 Image" class="node-image">
-                                        <span class="node-label">Viviane</span>
-                                        <p class="node-label-cargo">ESTAGIÁRIA</p>
-                                    </a>
-                                <li class="tree-node">
+                                <li class="tree-node-matutino">
                                     <a href="#" class="node-link funcionario">
                                         <img src="imagens/maria odorizzi.jpg" alt="Funcionario 1 Image"
                                             class="node-image">
@@ -91,7 +85,13 @@
                                         <p class="node-label-cargo">ESTAGIÁRIA</p>
                                     </a>
                                 </li>
-                                <li class="tree-node">
+                                <li class="tree-node-vespertino">
+                                    <a href="#" class="node-link funcionario">
+                                        <img src="imagens/viviane.jpg" alt="Funcionario 2 Image" class="node-image">
+                                        <span class="node-label">Viviane</span>
+                                        <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                    </a>
+                                <li class="tree-node-vespertino">
                                     <a href="#" class="node-link funcionario">
                                         <img src="imagens/kriscia.jpg" alt="Funcionario 1 Image" class="node-image">
                                         <span class="node-label">Kriscia</span>
@@ -104,6 +104,7 @@
                 </li>
             </ul> <!-- GESTÃO -->
             <!--TRIAGEM-->
+        <ul class="tree-root">
             <ul class="tree-children">
                 <li class="tree-node">
                     <a href="#" class="node-link setor">
