feat: filtro por turno

--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
     <button id="reload-btn" title="Recarregar página">
         <span class="icon">🔄</span>
     </button>
+    <div class="filtro-botoes">
+        <button class="btn-matutino" onclick="filtrar('matutino')">Matutino</button>
+        <button class="btn-vespertino" onclick="filtrar('vespertino')">Vespertino</button>
+        <button class="btn-todos" onclick="filtrar('todos')">Todos</button>
+    </div>
     <div class="container">
         <div class="tree">
             <ul class="tree-root">
