fix: turnos func

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
         <span class="icon">🔄</span>
     </button>
     <div class="filtro-botoes">
-        <button class="btn-matutino" onclick="filtrar('matutino')">Matutino</button>
-        <button class="btn-vespertino" onclick="filtrar('vespertino')">Vespertino</button>
-        <button class="btn-todos" onclick="filtrar('todos')">Todos</button>
+        <button class="btn-matutino" onclick="filtrar('matutino')">☀️ Matutino</button>
+        <button class="btn-vespertino" onclick="filtrar('vespertino')">🌇 Vespertino</button>
+        <button class="btn-todos" onclick="filtrar('todos')">📅 Todos</button>
     </div>
     <div class="container">
         <div class="tree">
@@ -269,7 +269,7 @@
                     <ul class="funcionarios">
                         <li class="tree-node">
                             <a href="#" class="node-link funcionario">
-                                <img src="imagens/none.png" alt="Coordenador Image" class="node-image">
+                                <img src="imagens/odair.jpg" alt="Coordenador Image" class="node-image">
                                 <span class="node-label">ODAIR</span>
                                 <p class="node-label-cargo">SERVIDOR</p>
                             </a>
@@ -476,6 +476,12 @@
                                 </li>
                             </ul>
                         </li>
+                        <li class="tree-node">
+                            <a href="#" class="node-link funcionario">
+                                <img src="imagens/none.png" alt="Coordenador Image" class="node-image">
+                                <span class="node-label">Sid</span>
+                                <p class="node-label-cargo">GUARDA DE TRÂNSITO</p>
+                            </a>
                     </ul>
                 </li>
                 <!--DEMUTRAN-->
@@ -1013,7 +1019,7 @@
                                         <span class="node-label">Monalisa</span>
                                         <p class="node-label-cargo">SERVIDORA</p>
                                     </a>
-                                    <ul class="sub-funcionarios">
+                                    <ul class="funcionarios">
                                         <li class="tree-node-matutino">
                                             <a href="#" class="node-link">
                                                 <img src="imagens/alana.jpg" alt="Employee Image" class="node-image">
