--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
             </div>
         
             <div class="dropdown-conteudo">
-                <a href="#" class="abrir-filtro">Filtrar</a>
+                <a href="#" class="abrir-filtro">🧾 Filtrar</a>
                 <div class="dropdown-submenu">
-                    <a href="#">Imprimir Relatório</a>
+                    <a href="#">🖨️ Imprimir Relatório</a>
                     <div class="submenu">
                         <a href="#" onclick="imprimirRelatorio('todos')">Todos</a>
                         <a href="#" onclick="imprimirRelatorio('matutino')">Matutino</a>
