--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                                         <img src="imagens/thaigor.jpg" alt="Funcionario 1 Image" class="node-image">
                                         <span class="node-label">thaigor</span>
                                         <p class="node-label-cargo">ESTAGIÁRIO</p>
+                                        <p class="node-label-turno">Matutino</p>
                                         <p></p>
                                     </a>
                                 </li>
@@ -114,6 +115,7 @@
                                             class="node-image">
                                         <span class="node-label">Maria</span>
                                         <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                        <p class="node-label-turno">Matutino</p>
                                     </a>
                                 </li>
                                 <li class="tree-node-vespertino">
@@ -121,12 +123,14 @@
                                         <img src="imagens/viviane.jpg" alt="Funcionario 2 Image" class="node-image">
                                         <span class="node-label">Viviane</span>
                                         <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                        <p class="node-label-turno">Vespertino</p>
                                     </a>
                                 <li class="tree-node-vespertino">
                                     <a href="#" class="node-link funcionario">
                                         <img src="imagens/kriscia.jpg" alt="Funcionario 1 Image" class="node-image">
                                         <span class="node-label">Kriscia</span>
                                         <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                        <p class="node-label-turno">Vespertino</p>
                                     </a>
                                 </li>
                             </ul>
@@ -1048,6 +1052,14 @@
                                     <ul class="funcionarios">
                                         <li class="tree-node-matutino">
                                             <a href="#" class="node-link">
+                                                <img src="imagens/francine.jpg" alt="Employee Image" class="node-image">
+                                                <span class="node-label">Francine</span>
+                                                <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                                <p class="node-label-turno">Matutino</p>
+                                            </a>
+                                        </li>
+                                        <li class="tree-node-matutino">
+                                            <a href="#" class="node-link">
                                                 <img src="imagens/alana.jpg" alt="Employee Image" class="node-image">
                                                 <span class="node-label">Alana</span>
                                                 <p class="node-label-cargo">ESTAGIÁRIA</p>
@@ -1103,14 +1115,6 @@
                                             <a href="#" class="node-link">
                                                 <img src="imagens/jennifer.jpg" alt="Employee Image" class="node-image">
                                                 <span class="node-label">Jennifer</span>
-                                                <p class="node-label-cargo">ESTAGIÁRIA</p>
-                                                <p class="node-label-turno">Vespertino</p>
-                                            </a>
-                                        </li>
-                                        <li class="tree-node-vespertino">
-                                            <a href="#" class="node-link">
-                                                <img src="imagens/francine.jpg" alt="Employee Image" class="node-image">
-                                                <span class="node-label">Francine</span>
                                                 <p class="node-label-cargo">ESTAGIÁRIA</p>
                                                 <p class="node-label-turno">Vespertino</p>
                                             </a>
