--- a/index.html
+++ b/index.html
@@ -508,9 +508,9 @@
                         </li>
                         <li class="tree-node">
                             <a href="#" class="node-link funcionario">
-                                <img src="imagens/none.png" alt="Coordenador Image" class="node-image">
-                                <span class="node-label">Sid</span>
-                                <p class="node-label-cargo">GUARDA DE TRÂNSITO</p>
+                                <img src="imagens/sidnei.jpg" alt="Coordenador Image" class="node-image">
+                                <span class="node-label">Sidnei</span>
+                                <p class="node-label-cargo">GUARDA D. TRÂNSITO</p>
                             </a>
                     </ul>
                 </li>
