--- a/index.html
+++ b/index.html
@@ -133,6 +133,14 @@
                                         <p class="node-label-turno">Vespertino</p>
                                     </a>
                                 </li>
+                                <li class="tree-node-vespertino">
+                                    <a href="#" class="node-link funcionario">
+                                        <img src="imagens/rafaela.jpg" alt="Funcionario 1 Image" class="node-image">
+                                        <span class="node-label">Rafaela</span>
+                                        <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                        <p class="node-label-turno">Vespertino</p>
+                                    </a>
+                                </li>
                             </ul>
                         </li>
                     </ul>
@@ -149,8 +157,8 @@
                     <ul class="funcionarios">
                         <li class="tree-node-vespertino">
                             <a href="#" class="node-link">
-                                <img src="imagens/liz.jpg" alt="Employee Image" class="node-image">
-                                <span class="node-label">Liz</span>
+                                <img src="imagens/erissamia.jpg" alt="Employee Image" class="node-image">
+                                <span class="node-label">Erissâmia</span>
                                 <p class="node-label-cargo">ESTAGIÁRIA</p>
                                 <p class="node-label-turno">Vespertino</p>
                             </a>
@@ -381,6 +389,14 @@
                                         <p class="node-label-turno">Matutino</p>
                                     </a>
                                 </li>
+                                <li class="tree-node-matutino">
+                                    <a href="#" class="node-link">
+                                        <img src="imagens/Daniel_foto.jpg" alt="Employee Image" class="node-image">
+                                        <span class="node-label">Daniel</span>
+                                        <p class="node-label-cargo">ESTAGIÁRIO</p>
+                                        <p class="node-label-turno">Matutino</p>
+                                    </a>
+                                </li>
                             </ul>
                         </li>
                     </ul>
@@ -439,11 +455,28 @@
                                                 <p class="node-label-turno">Matutino</p>
                                             </a>
                                         </li>
+                                        <li class="tree-node-matutino">
+                                            <a href="#" class="node-link">
+                                                <img src="imagens/laiza-barros.jpg" alt="Employee Image" class="node-image">
+                                                <span class="node-label">Laiza</span>
+                                                <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                                <p class="node-label-turno">Matutino</p>
+                                            </a>
+                                        </li>
                                         <li class="tree-node-vespertino">
                                             <a href="#" class="node-link">
                                                 <img src="imagens/yasmin tilch.jpg" alt="Employee Image"
                                                     class="node-image">
                                                 <span class="node-label">Yasmin</span>
+                                                <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                                <p class="node-label-turno">Vespertino</p>
+                                            </a>
+                                        </li>
+                                        <li class="tree-node-vespertino">
+                                            <a href="#" class="node-link">
+                                                <img src="imagens/sofya.jpg" alt="Employee Image"
+                                                    class="node-image">
+                                                <span class="node-label">Sofya</span>
                                                 <p class="node-label-cargo">ESTAGIÁRIA</p>
                                                 <p class="node-label-turno">Vespertino</p>
                                             </a>
@@ -495,11 +528,18 @@
                                     <ul class="sub-funcionarios">
                                         <li class="tree-node-matutino">
                                             <a href="#" class="node-link">
-                                                <img src="imagens/leonardo bertolo.jpg" alt="Employee Image"
-                                                    class="node-image">
+                                                <img src="imagens/leonardo bertolo.jpg" alt="Employee Image"class="node-image">
                                                 <span class="node-label">Leonardo</span>
                                                 <p class="node-label-cargo">ESTAGIÁRIO</p>
                                                 <p class="node-label-turno">Matutino</p>
+                                            </a>
+                                        </li>
+                                        <li class="tree-node-vespertino">
+                                            <a href="#" class="node-link">
+                                                <img src="imagens/junior.jpg" alt="Employee Image"class="node-image">
+                                                <span class="node-label">Junior</span>
+                                                <p class="node-label-cargo">ESTAGIÁRIO</p>
+                                                <p class="node-label-turno">Vespertino</p>
                                             </a>
                                         </li>
                                     </ul>
@@ -590,6 +630,15 @@
                                                         <p class="node-label-turno">Matutino</p>
                                                     </a>
                                                 </li>
+                                                <li class="tree-node-matutino">
+                                                    <a href="#" class="node-link funcionario">
+                                                        <img src="imagens/beatriz.jpg" alt="Employee Image"
+                                                            class="node-image">
+                                                        <span class="node-label">Beatriz</span>
+                                                        <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                                        <p class="node-label-turno">Matutino</p>
+                                                    </a>
+                                                </li>
                                                 <li class="tree-node-vespertino">
                                                     <a href="#" class="node-link funcionario">
                                                         <img src="imagens/jean.jpg" alt="Employee Image"
@@ -615,14 +664,6 @@
                                                         <span class="node-label">Debora</span>
                                                         <p class="node-label-cargo">ESTAGIÁRIA</p>
                                                         <p class="node-label-turno">Vespertino</p>
-                                                    </a>
-                                                </li>
-                                                <li class="tree-node">
-                                                    <a href="#" class="node-link funcionario">
-                                                        <img src="imagens/none.png" alt="Employee Image"
-                                                            class="node-image">
-                                                        <span class="node-label">?</span>
-                                                        <p class="node-label-cargo">ESTAGIÁRIO(A)</p>
                                                     </a>
                                                 </li>
                                                 <li class="tree-node">
@@ -728,6 +769,15 @@
                                                         <p class="node-label-turno">Vespertino</p>
                                                     </a>
                                                 </li>
+                                                <li class="tree-node-vespertino">
+                                                    <a href="#" class="node-link">
+                                                        <img src="imagens/jessica-samara.jpg" alt="Employee Image"
+                                                            class="node-image">
+                                                        <span class="node-label">Jéssica</span>
+                                                        <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                                        <p class="node-label-turno">Vespertino</p>
+                                                    </a>
+                                                </li>
                                             </ul>
                                     </ul>
                                 </li>
@@ -784,15 +834,16 @@
                                 <li class="tree-node-vespertino">
                                     <a href="#" class="node-link">
                                         <img src="imagens/jackson.jpg" alt="Employee Image" class="node-image">
-                                        <span class="node-label">jackson</span>
+                                        <span class="node-label">Jackson</span>
                                         <p class="node-label-cargo">ESTAGIÁRIO</p>
                                         <p class="node-label-cargo">Vespertino</p>
                                     </a>
-                                <li class="tree-node">
+                                <li class="tree-node-matutino">
                                     <a href="#" class="node-link">
                                         <img src="imagens/none.png" alt="Employee Image" class="node-image">
-                                        <span class="node-label">?</span>
-                                        <p class="node-label-cargo">ESTAGIÁRIO</p>
+                                        <span class="node-label">Júlia</span>
+                                        <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                        <p class="node-label-cargo">Matutino</p>
                                     </a>
                                 </li>
                             </ul>
@@ -882,14 +933,6 @@
                                         <span class="node-label">Guilherme</span>
                                         <p class="node-label-cargo">ESTAGIÁRIO</p>
                                         <p class="node-label-turno">Matutino</p>
-                                    </a>
-                                </li>
-                                <li class="tree-node-vespertino">
-                                    <a href="#" class="node-link">
-                                        <img src="imagens/kayo.jpg" alt="Employee Image" class="node-image">
-                                        <span class="node-label">Kayo</span>
-                                        <p class="node-label-cargo">ESTAGIÁRIO</p>
-                                        <p class="node-label-turno">Vespertino</p>
                                     </a>
                                 </li>
                             </ul>
@@ -991,8 +1034,8 @@
                                 </li>
                                 <li class="tree-node-vespertino">
                                     <a href="#" class="node-link">
-                                        <img src="imagens/rafaela.jpg" alt="Employee Image" class="node-image">
-                                        <span class="node-label">RAFAELA</span>
+                                        <img src="imagens/pietra.jpg" alt="Employee Image" class="node-image">
+                                        <span class="node-label">Pietra</span>
                                         <p class="node-label-cargo">ESTAGIÁRIA</p>
                                         <p class="node-label-turno">Vespertino</p>
                                     </a>
